kubernetes/home/vaultwarden/app/vaultwarden.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.37.4
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden-data
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Vaultwarden
    gethomepage.dev/group: Security
    gethomepage.dev/icon: vaultwarden
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-forwardauth-authelia@kubernetescrd'
    external-dns.kubernetes.io/enabled: "true"
    external-dns.kubernetes.io/hostname: vault.saturn.ci
    external-dns.kubernetes.io/target: jupiter.saturn.ci
spec:
  tls:
    - secretName: vault.saturn.ci
      hosts:
        - vault.saturn.ci
  rules:
    - host: "vault.saturn.ci"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
